Prepare project for development

--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "wjozwik-portfolio",
+  "name": "portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier -w ."
   },
   "dependencies": {
     "react": "^18",
@@ -22,6 +23,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.5.0"
   }
 }
