--- a/package.json
+++ b/package.json
@@ -10,21 +10,22 @@
     "format": "prettier -w ."
   },
   "dependencies": {
+    "@next/third-parties": "^14.1.4",
+    "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
+    "postcss": "^8",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.5.0"
+    "prettier-plugin-tailwindcss": "^0.5.0",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
